--- a/get_tags/test.ipynb
+++ b/get_tags/test.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": false
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pymssql\n",
     "import pandas as pd\n",
+    "import pymssql\n",
     "import numpy as np\n",
     "import re\n",
     "import time"
@@ -20,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "#主函数测试"
@@ -28,8 +25,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -493,15 +489,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
